--- a/frontend-react/src/App.css
+++ b/frontend-react/src/App.css
@@ -87,6 +87,42 @@
   word-wrap: break-word;
 }
 
+@media screen and (max-width: 500px) {
+  .custom-nav-img {
+    width: 50px !important;
+  }
+  .custom-about-img {
+    width: 300px;
+    /* width: 80%; */
+  }
+
+  .custom-mobile-subtitle {
+    font-size: 1.2rem;
+  }
+
+  .custom-smaller-mobile-text {
+    font-size: 0.9rem;
+  }
+
+  .custom-mobile-img {
+    width: 70px !important;
+  }
+
+  .custom-mobile-margin {
+    margin-bottom: 0 !important;
+  }
+
+  .custom-mobile-metamask-fox {
+    display: flex;
+    align-items: center;
+    width: 70px !important;
+  }
+
+  .shizuru {
+    font-size: 2rem;
+  }
+}
+
 /* .bubble-colors {
   background-color: hsla(350, 100%, 88%, 0.3);
   background-color: #ffc2cc4d;
@@ -112,42 +148,3 @@
   background-color: hsla(162, 100%, 88%, 1);
   background-color: #c2ffed;
 } */
-
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
