--- a/frontend-react/src/App.css
+++ b/frontend-react/src/App.css
@@ -1,5 +1,5 @@
 .background {
-  background: url(./img/background.svg) no-repeat center center fixed;
+  /* background: url(./img/background.svg) no-repeat center center fixed; */
   background-size: cover;
   min-height: 100vh;
 }
