--- a/frontend-react/src/index.css
+++ b/frontend-react/src/index.css
@@ -4,7 +4,7 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #355A20
+  background-color: #000000
 }
 
 code {
